css/style.css
/*
  Minor Second Modular Scale:
  https://www.modularscale.com/?1&em&1.067
*/

body {
  background-color: #ab0f0f;
  color: #02121c;
  font-size:1.296em;
}

fieldset{
  background-color: #bfa443
}

  #title {
    padding: .5em .5em .2em .5em;
	margin: .5em .5em .2em .5em;
	text-align: center;
	font-size:0.878em; 
	font-family: "Diplomata SC", "Ewert", cursive;
}

  label {
	display: block;
	text-align: center;
	font-size:1.215em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  
  input {
	width : 90%;
	border-radius: .5em;
	border: solid #000000;
}
  
  input[type="submit"] {
	font-size : 1.383em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  
  input [type="text"] {
	font-size : 1.138em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  
  input [type="email"] {
    font-size : 1.383em;
	font-family : "Diplomata SC", "Ewert", cursive;
}

  input [type="number"] {
	font-size : 1.383em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

@media screen and (min-width: 600px) {
  body {
    font-size: 1.913em;
  }

  #title {
    font-size: 1em;
	margin-left: 3.5;
 }
  input[type=submit] {
    margin-left: 1.8em;
 }
}

@media only screen and (min-width: 992px) {
  body {
    font-size: 2.178em;
  }
  
  

  
  
  
  

